--- a/src/MlcollectBundle/Resources/views/Default/index.html.twig
+++ b/src/MlcollectBundle/Resources/views/Default/index.html.twig
@@ -1,3 +1,5 @@
+<h1>Mailinglist Collector</h1>
+
 {% for data in datas %}
     Collection: {{ data.collection }}   <br> 
     Email: {{ data.email }}<br>    
